update project and data desc

--- a/project.ipynb
+++ b/project.ipynb
@@ -85,6 +85,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 마키아벨리즘에 관한 파생변수 추가\n",
+    "- Q1 ~ Q20이 마키아벨리즘 관련 질문이라는 것을 고려\n",
+    "- "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
